Associate loaded breakpoints with a moving cursor

Loaded breakpoints don't trigger markChanged(), which is normally
responsible for getting a moving cursor for breakpoints. Instead
the moving cursor for loaded breakpoints is now added in
textDocumentCreated().
Logic for adding moving cursors is also moved into seperate function,
as the same code snippet was used multiple times.

BUG: 424431
FIXED-IN: 5.6.0